# uniprot-demos

./: README.md  pyproject.toml
evidence-retrofit/: README.md
evidence-retrofit/ADH/: index.faiss  index.pkl
evidence-retrofit/papers/: PMID12702265.txt  PMID14690591.txt  PMID2937632.txt  PMID320000.txt  PMID6277922.txt  PMID6279086.txt  PMID6985717.txt  PMID8533473.txt
residue-specific-information/: README.md  examples.csv
uniprot-helpbot/: README.md  uniprot-helpbot.py
