[tool.poetry]
name = "uniprot-demos"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paper-qa = "^3.3.3"
gradio = "^3.38.0"
tqdm = "^4.65.0"
polars = "^0.18.8"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
